# django-model-forge

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
demo/: asgi.py  settings.py  urls.py  wsgi.py
src/fake_model/: __init__.py  apps.py  faked.py  tests.py
src/model_forge/: __init__.py  apps.py  forge.py  tests.py
